--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -43,10 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3985115a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/04/12 17:57:46 WARN Utils: Your hostname, gittil resolves to a loopback address: 127.0.1.1; using 192.168.0.15 instead (on interface wlo1)\n",
+      "22/04/12 17:57:46 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/jars/spark-unsafe_2.12-3.2.1.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/04/12 17:57:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder.appName('extract_RAW')\\\n",
     "    .config('spark.master','local')\\\n",
@@ -65,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
@@ -77,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "47c41dc2",
    "metadata": {},
    "outputs": [
@@ -100,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
@@ -117,7 +135,7 @@
        "51091268"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "d3634244",
    "metadata": {},
    "outputs": [
@@ -138,36 +156,36 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- CNPJ_basico: integer (nullable = true)\n",
-      " |-- CNPJ_ordem: integer (nullable = true)\n",
-      " |-- CNPJ_dv: integer (nullable = true)\n",
-      " |-- id_matriz_filial: integer (nullable = true)\n",
-      " |-- nome_fantasia: string (nullable = true)\n",
-      " |-- sit_cad: string (nullable = true)\n",
-      " |-- dt_cad: integer (nullable = true)\n",
-      " |-- mt_sit_cad: integer (nullable = true)\n",
-      " |-- cid_ext: string (nullable = true)\n",
-      " |-- pais: integer (nullable = true)\n",
-      " |-- dt_inicio_at: integer (nullable = true)\n",
-      " |-- cnae_principal: string (nullable = true)\n",
-      " |-- cnae_secundario: string (nullable = true)\n",
-      " |-- tp_log: string (nullable = true)\n",
-      " |-- log: string (nullable = true)\n",
-      " |-- nm: string (nullable = true)\n",
-      " |-- comp: string (nullable = true)\n",
-      " |-- bairro: string (nullable = true)\n",
-      " |-- CEP: string (nullable = true)\n",
-      " |-- UF: string (nullable = true)\n",
-      " |-- municipio: string (nullable = true)\n",
-      " |-- ddd1: string (nullable = true)\n",
-      " |-- tel1: string (nullable = true)\n",
-      " |-- ddd2: string (nullable = true)\n",
-      " |-- tel2: string (nullable = true)\n",
-      " |-- ddd_fax: string (nullable = true)\n",
-      " |-- fax: string (nullable = true)\n",
-      " |-- email: string (nullable = true)\n",
-      " |-- sit_esp: string (nullable = true)\n",
-      " |-- dt_sit_esp: string (nullable = true)\n",
+      " |-- _c0: integer (nullable = true)\n",
+      " |-- _c1: integer (nullable = true)\n",
+      " |-- _c2: integer (nullable = true)\n",
+      " |-- _c3: integer (nullable = true)\n",
+      " |-- _c4: string (nullable = true)\n",
+      " |-- _c5: string (nullable = true)\n",
+      " |-- _c6: integer (nullable = true)\n",
+      " |-- _c7: integer (nullable = true)\n",
+      " |-- _c8: string (nullable = true)\n",
+      " |-- _c9: integer (nullable = true)\n",
+      " |-- _c10: integer (nullable = true)\n",
+      " |-- _c11: string (nullable = true)\n",
+      " |-- _c12: string (nullable = true)\n",
+      " |-- _c13: string (nullable = true)\n",
+      " |-- _c14: string (nullable = true)\n",
+      " |-- _c15: string (nullable = true)\n",
+      " |-- _c16: string (nullable = true)\n",
+      " |-- _c17: string (nullable = true)\n",
+      " |-- _c18: string (nullable = true)\n",
+      " |-- _c19: string (nullable = true)\n",
+      " |-- _c20: string (nullable = true)\n",
+      " |-- _c21: string (nullable = true)\n",
+      " |-- _c22: string (nullable = true)\n",
+      " |-- _c23: string (nullable = true)\n",
+      " |-- _c24: string (nullable = true)\n",
+      " |-- _c25: string (nullable = true)\n",
+      " |-- _c26: string (nullable = true)\n",
+      " |-- _c27: string (nullable = true)\n",
+      " |-- _c28: string (nullable = true)\n",
+      " |-- _c29: string (nullable = true)\n",
       "\n"
      ]
     }
@@ -180,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "aadb05dd",
    "metadata": {},
    "outputs": [
@@ -219,7 +237,7 @@
        " '_c29']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "c41ef1cb",
    "metadata": {},
    "outputs": [],
@@ -278,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "b9154d13",
    "metadata": {},
    "outputs": [
@@ -317,7 +335,7 @@
        " 'dt_sit_esp']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "f722d05c",
    "metadata": {},
    "outputs": [],
@@ -355,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "4e5b1a64",
    "metadata": {},
    "outputs": [
@@ -381,7 +399,7 @@
        " 'municipio']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "95bcb823",
    "metadata": {},
    "outputs": [
@@ -428,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "2a407e53",
    "metadata": {},
    "outputs": [
@@ -447,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "553b2028",
    "metadata": {},
    "outputs": [],
